将 phaser_mark 内的代码抽离为 convert 内文件代码; phaser_mark 代替 phaser.marker

--- a/github_repositories/phaser/examples/phaser.start.html
+++ b/github_repositories/phaser/examples/phaser.start.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="phaser-example" class="fill"></div>
 	<script type="module">
-		import './phaser.marker.js';
+		import '../phaser_mark/phaser_mark.js';
 		import Phaser from './phaser.modules.js';
 
 		class Example extends Phaser.Scene {
