--- a/tools/code_analysis/ui/code_analysis_ui.html
+++ b/tools/code_analysis/ui/code_analysis_ui.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 	<link rel="icon" href="../logo.png">
-	<title>debounce</title>
+	<title>code_analysis_ui</title>
 	<link href="../../../css/default.css" rel="stylesheet" type="text/css" />
 	<link href="../../../css/common.css" rel="stylesheet" type="text/css" />
 </head>
