调整 text_enciphe 代码结构

--- a/tools/text_encipher/text_encipher.html
+++ b/tools/text_encipher/text_encipher.html
@@ -16,9 +16,15 @@
 	-->
 
 <body>
-	<input id="textEncipher" type="file" />
-	<textarea id="textDecrypt"></textarea>
+	<input id="convertFile" type="file" />
+	<textarea id="recoverFile"></textarea>
 
+	<!--<input id="fileToPng" type="file" />
+	<input id="pngToFile" type="file" />-->
+	<!--<textarea id="textDecrypt"></textarea>-->
+
+	<!--<script src="path/to/upng-js.min.js"></script>-->
+	<!--<script defer type="text/javascript" src="./ibs/browser.js"></script>-->
 	<script defer type="module" src="./text_encipher.js"></script>
 </body>
 
