--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -15,10 +15,13 @@
 	-->
 
 <body>
+	<div
+		style="position: absolute; width: 12px; height: 12px; left: 0; top: 0; background-color: rgba(255, 255, 255, 1);">
+	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 
 	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
-	<script defer type="module" src="./fabric.js.start.js"></script>
+	<script defer type="module" src="./fabric.js.text.js"></script>
 </body>
 
 </html>
