添加完善 fabric 案例

--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -21,7 +21,11 @@
 	<canvas id="renderCanvas" class="fill"></canvas>
 
 	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
-	<script defer type="module" src="./fabric.js.text.js"></script>
+	<script defer type="module" src="./shapes/fabric.js.circle.js"></script>
+	<!-- <script defer type="module" src="./shapes/fabric.js.image.js"></script> -->
+	<!-- <script defer type="module" src="./shapes/fabric.js.polygon.js"></script> -->
+	<!-- <script defer type="module" src="./shapes/fabric.js.rect.js"></script> -->
+	<!-- <script defer type="module" src="./shapes/fabric.js.text.js"></script> -->
 </body>
 
 </html>
