调整 fabric 案例代码, 方便最新版和旧版的切换使用

--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -20,7 +20,8 @@
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 
-	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
+	<!-- <script defer type="text/javascript" src="/fabric.js/dist/all.js"></script> -->
+	<script defer type="module" src="./fabric.js.modules.js"></script>
 	<script defer type="module" src="./shapes/fabric.js.circle.js"></script>
 	<!-- <script defer type="module" src="./shapes/fabric.js.image.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.polygon.js"></script> -->
