--- a/tools/canvas_engine/examples/test/canvas_engine_test.html
+++ b/tools/canvas_engine/examples/test/canvas_engine_test.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 	<link rel="icon" href="../../canvas_engine.png">
-	<title>test_matrix</title>
+	<title>canvas_engine_test</title>
 	<link href="../../../../css/default.css" rel="stylesheet" type="text/css" />
 	<link href="../../../../css/common.css" rel="stylesheet" type="text/css" />
 </head>
@@ -15,10 +15,9 @@
 -->
 
 <body>
-	<div style="position: absolute; width: 12px; height: 12px; left: 0; top: 0; background-color: rgba(0, 0, 0, 0.6);">
-	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
-	<script type="module" src="./test_matrix.js"></script>
+	<!-- <script type="module" src="./test_matrix.js"></script> -->
+	<script type="module" src="./test_sat.js"></script>
 </body>
 
 </html>
