将所有 libs 依赖统一放到一个 libs 文件夹内, 调整相关引用

--- a/tools/canvas_engine/examples/test/canvas_engine_test.html
+++ b/tools/canvas_engine/examples/test/canvas_engine_test.html
@@ -16,8 +16,8 @@
 
 <body>
 	<canvas id="renderCanvas" class="fill"></canvas>
-	<!-- <script type="module" src="./test_matrix.js"></script> -->
-	<script type="module" src="./test_sat.js"></script>
+	<script type="module" src="./test_matrix.js"></script>
+	<!-- <script type="module" src="./test_sat.js"></script> -->
 </body>
 
 </html>
