--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -16,17 +16,17 @@
 
 <body>
 	<div
-		style="position: absolute; width: 12px; height: 12px; left: 0; top: 0; background-color: rgba(255, 255, 255, 1);">
+		style="position: absolute;width: 12px;height: 12px;left: 0;top: 0;background-color: rgba(0, 0, 0, 0.6);z-index: 2;">
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 
 	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
 	<script defer type="module" src="./fabric.js.modules.js"></script>
-	<script defer type="module" src="./shapes/fabric.js.circle.js"></script>
+	<!-- <script defer type="module" src="./shapes/fabric.js.circle.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.image.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.polygon.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.rect.js"></script> -->
-	<!-- <script defer type="module" src="./shapes/fabric.js.text.js"></script> -->
+	<script defer type="module" src="./events//event_select_shape.js"></script>
 </body>
 
 </html>
