添加 phaser@3.55.2 依赖; 完善其他依赖引用信息

--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -20,6 +20,7 @@
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 
+	<script defer type="text/javascript" src="../../../libs/lil-gui/dist/lil-gui.umd.js"></script>
 	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
 	<script defer type="module" src="./fabric.js.modules.js"></script>
 	<!-- <script defer type="module" src="./shapes/fabric.js.circle.js"></script> -->
