--- a/tools/canvas_engine/examples/canvas_engine.html
+++ b/tools/canvas_engine/examples/canvas_engine.html
@@ -18,6 +18,7 @@
 	<div style="position: absolute; width: 12px; height: 12px; left: 0; top: 0; background-color: rgba(0, 0, 0, 0.6);">
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
+	<script type="text/javascript" src="../../../libs/lil-gui/dist/lil-gui.umd.js"></script>
 	<script type="module" src="./canvas_engine.js"></script>
 </body>
 
