--- a/tools/game_engine/examples/game_engine.html
+++ b/tools/game_engine/examples/game_engine.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
-	<link rel="icon" href="../canvas_engine.png">
-	<title>canvas_engine</title>
+	<link rel="icon" href="../game_engine.png">
+	<title>game_engine</title>
 	<link href="../../../css/default.css" rel="stylesheet" type="text/css" />
 	<link href="../../../css/common.css" rel="stylesheet" type="text/css" />
 </head>
@@ -19,7 +19,7 @@
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 	<script type="text/javascript" src="../../../libs/lil-gui/dist/lil-gui.umd.js"></script>
-	<script type="module" src="./canvas_engine.js"></script>
+	<script type="module" src="./game_engine.js"></script>
 </body>
 
 </html>
