--- a/tools/game_engine/examples/test/game_engine_test.html
+++ b/tools/game_engine/examples/test/game_engine_test.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
-	<link rel="icon" href="../../canvas_engine.png">
+	<link rel="icon" href="../../game_engine.png">
 	<title>canvas_engine_test</title>
 	<link href="../../../../css/default.css" rel="stylesheet" type="text/css" />
 	<link href="../../../../css/common.css" rel="stylesheet" type="text/css" />
@@ -17,8 +17,8 @@
 <body>
 	<canvas id="renderCanvas" class="fill"></canvas>
 	<script type="text/javascript" src="../../../../libs/lil-gui/dist/lil-gui.umd.min.js"></script>
-	<script type="module" src="./test_matrix.js"></script>
-	<!-- <script type="module" src="./test_sat.js"></script> -->
+	<!-- <script type="module" src="./test_matrix.js"></script> -->
+	<script type="module" src="./test_sat.js"></script>
 </body>
 
 </html>
