phaser 案例改为 canvas 2d 渲染类型

--- a/github_repositories/phaser/examples/phaser.start.html
+++ b/github_repositories/phaser/examples/phaser.start.html
@@ -75,12 +75,13 @@
 		const config = {
 			width: 800,
 			height: 600,
-			type: Phaser.AUTO,
+			type: Phaser.CANVAS,
 			parent: 'phaser-example',
 			scene: Example
 		};
 
 		function startGame() {
+			console.clear();
 			new Phaser.Game(config);
 		}
 
