fabric.start 案例调整

--- a/github_repositories/fabric.js/examples/fabric.js.start.html
+++ b/github_repositories/fabric.js/examples/fabric.js.start.html
@@ -21,13 +21,13 @@
 	<canvas id="renderCanvas" class="fill"></canvas>
 
 	<script defer type="text/javascript" src="../../../libs/lil-gui/dist/lil-gui.umd.js"></script>
-	<script defer type="text/javascript" src="/fabric.js/dist/all.js"></script>
 	<script defer type="module" src="./fabric.js.modules.js"></script>
 	<!-- <script defer type="module" src="./shapes/fabric.js.circle.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.image.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.polygon.js"></script> -->
 	<!-- <script defer type="module" src="./shapes/fabric.js.rect.js"></script> -->
-	<script defer type="module" src="./events//event_select_shape.js"></script>
+	<script defer type="module" src="./shapes/fabric.js.text.js"></script>
+	<!-- <script defer type="module" src="./events/event_select_shape.js"></script> -->
 </body>
 
 </html>
