phaser module 调整

--- a/github_repositories/phaser/examples/phaser.start.html
+++ b/github_repositories/phaser/examples/phaser.start.html
@@ -16,7 +16,8 @@
 
 <body>
 	<div id="phaser-example" class="fill"></div>
-	<script type="module" src="./phaser.start.js"></script>
+	<script defer type="module" src="./phaser.modules.js"></script>
+	<script defer type="module" src="./phaser.start.js"></script>
 </body>
 
 </html>
