--- a/tools/game_engine/examples/test/game_engine_test.html
+++ b/tools/game_engine/examples/test/game_engine_test.html
@@ -17,8 +17,8 @@
 <body>
 	<canvas id="renderCanvas" class="fill"></canvas>
 	<script type="text/javascript" src="../../../../libs/lil-gui/dist/lil-gui.umd.min.js"></script>
-	<script type="module" src="./test_matrix.js"></script>
-	<!-- <script type="module" src="./test_sat.js"></script> -->
+	<!-- <script type="module" src="./test_matrix.js"></script> -->
+	<script type="module" src="./test_sat.js"></script>
 </body>
 
 </html>
