修改 pokerogue/reproduction/pokerogue.html 中的代码引用

--- a/github_repositories/stop/pokerogue/reproduction/pokerogue.html
+++ b/github_repositories/stop/pokerogue/reproduction/pokerogue.html
@@ -30,11 +30,11 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"phaser3-rex-plugins/": "/accumulate/libs/phaser3-rex-plugins@1.1.84/"
+				"phaser3-rex-plugins/": "/accumulate/javascript_libs/phaser3-rex-plugins@1.1.84/"
 			}
 		}
 	</script>
-	<script type="text/javascript" src="/accumulate/libs/phaser@3.55.2/dist/phaser.min.js"></script>
+	<script type="text/javascript" src="/accumulate/javascript_libs/phaser@3.55.2/dist/phaser.min.js"></script>
 	<script type="module" src="/pokerogue/src/main.js"></script>
 </body>
 
