game_engine 初步添加动画

--- a/tools/game_engine/examples/test/game_engine_test.html
+++ b/tools/game_engine/examples/test/game_engine_test.html
@@ -16,8 +16,10 @@
 
 <body>
 	<canvas id="renderCanvas" class="fill"></canvas>
-	<script type="text/javascript" src="../../../../javascript_libs/lil-gui/dist/lil-gui.umd.min.js"></script>
-	<script type="module" src="./test_loader_image.js"></script>
+	<script type="text/javascript" src="../../../../javascript_libs/lil-gui/dist/lil-gui.umd.min.js">
+	</script>
+	<script type="module" src="./test_animation.js"></script>
+	<!-- <script type="module" src="./test_loader_image.js"></script> -->
 	<!-- <script type="module" src="./test_matrix.js"></script> -->
 	<!-- <script type="module" src="./test_sat.js"></script> -->
 </body>
