--- a/tools/game_engine/examples/game_engine.html
+++ b/tools/game_engine/examples/game_engine.html
@@ -14,7 +14,7 @@
 
 -->
 
-<body>
+<body style="overflow: hidden;">
 	<div style="position: absolute; width: 12px; height: 12px; left: 0; top: 0; background-color: rgba(0, 0, 0, 0.6);">
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
