--- a/tools/game_engine/examples/test/game_engine_test.html
+++ b/tools/game_engine/examples/test/game_engine_test.html
@@ -14,7 +14,7 @@
 
 -->
 
-<body>
+<body style="overflow: hidden;">
 	<canvas id="renderCanvas" class="fill"></canvas>
 	<script type="text/javascript" src="../../../../javascript_libs/lil-gui/dist/lil-gui.umd.min.js">
 	</script>
