添加 game_engine.js 方便管理所有类，调整相关代码; 开始重新整理案例代码，方便直接查看效果

--- a/tools/game_engine/examples/game_engine.start.html
+++ b/tools/game_engine/examples/game_engine.start.html
@@ -19,7 +19,7 @@
 	</div>
 	<canvas id="renderCanvas" class="fill"></canvas>
 	<script type="text/javascript" src="../../../javascript_libs/lil-gui/dist/lil-gui.umd.js"></script>
-	<script type="module" src="./game_engine.js"></script>
+	<script type="module" src="./game_engine.start.js"></script>
 </body>
 
 </html>
